##Text encoding: utf-8

2015-12-20  Jean Bréfort  <jean.brefort@normalesup.org>
	* programs/3d/gchem3d.appdata.xml.in: add kudos as requested.
	* programs/calc/gchemcalc.appdata.xml.in: ditto.
	* programs/crystal/gcrystal.appdata.xml.in: ditto.
	* programs/paint/gchempaint.appdata.xml.in: ditto.
	* programs/paint/gchempaint.desktop.in.in: ditto.
	* programs/spectra/gspectrum.appdata.xml.in: ditto.
	* programs/table/gchemtable.appdata.xml.in: ditto.

2015-12-17  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gccv/canvas.cc: fix drawing when zoomed.

2015-12-01  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/bond.cc: quick implementation of weak bonds.
	* libs/gcp/bond.h: ditto.
	* plugins/paint/bonds/bondtool.cc: ditto.
	* plugins/paint/bonds/bondtool.h: ditto.
	* plugins/paint/bonds/plugin.cc: ditto.

2015-11-25  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/window.cc: don't crash when importing an invalid string.
	[Redhat bug #1285154]

2015-09-12  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: add a new direct OpenGL rendering option.
	* libs/gcr/application.cc: ditto.
	* libs/gcr/application.h: ditto.
	* libs/gcr/window.cc: ditto.
	* libs/gcugtk/Makefile.am: ditto.
	* libs/gcugtk/chem3dapplication.cc: ditto.
	* libs/gcugtk/chem3dapplication.h: ditto.
	* libs/gcugtk/chem3dwindow.cc: ditto.
	* libs/gcugtk/glapplication.cc: ditto.
	* libs/gcugtk/glapplication.h: ditto.
	* libs/gcugtk/glview.cc: ditto.
	* libs/gcugtk/glview.h: ditto.
	* plugins/paint/arrows/looptool.cc: minor update.
	* schemas/org.gnome.gchemutils.gschema.xml.in.in: new direct OpenGL
	rendering option.

2015-01-27  Jean Bréfort  <jean.brefort@normalesup.org>
	* plugins/paint/atoms/orbital.cc: make hybrid orbitals really work.
	* plugins/paint/atoms/orbitaltool.cc: ditto.

2015-01-23  Jean Bréfort  <jean.brefort@normalesup.org>
	* plugins/paint/atoms/orbital-prop.ui: add support for hybrid orbitals.
	* plugins/paint/atoms/orbital.cc: ditto.