@@ -3,6 +3,7 @@ Version 0.15.2
 		* Add support for hybrid orbitals.
 		* Don't crash when importing an invalid string. [Redhat bug #1285154]
 		* Fix drawing when zoomed.
+		* Fix various runtime errors.
 	Mozilla plugin:
 		* Supports the npapi-sdk package as requirement.
 	Other: 
